# calisim-examples-workshop-material

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  SECURITY.md  docker-compose.devcontainer.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build.yaml
binder/: Dockerfile
docs/source/: conf.py  index.rst
docs/source/communications_community/: announcements.md  index.rst
docs/source/licenses/: license.rst
docs/source/workshops/: coordinators.rst  geosir.rst  index.rst  jfruit2.rst  tegenomesimulator.rst
experimental/wofost/: ekf_example.py
presentations/bsi/: 2025_10_calisim_workshop.pptx
presentations/te_punaha_matatini/: 2025_10_calisim_workshop.pptx
workshop/1_linear_regression/: 1_linear_regression_calibration.html  1_linear_regression_calibration.ipynb
workshop/2_jfruit2/: 0_jfruit2_intro.html  0_jfruit2_intro.ipynb  1_jfruit2_sensitivity_analysis.ipynb  1_jfruit2_sensitivity_and_uncertainty_analysis.ipynb  3_jfruit2_history_matching.ipynb
workshop/2_jfruit2/data/input/: GS_Golden.csv
workshop/2_jfruit2/data/observation/: obs_apple_optim_GS.csv
workshop/2_jfruit2/html/: 1_jfruit2_sensitivity_and_uncertainty_analysis.html  3_jfruit2_history_matching.html
workshop/3_tegenomesimulator/: 1_tegenomesimulator_m0.ipynb  2_tegenomesimulator_optimisation.ipynb  2_tegenomesimulator_reliability_analysis.html  2_tegenomesimulator_reliability_analysis.ipynb  3_tegenomesimulator_optimisation.ipynb  3_tegenomesimulator_sensitivity_analysis.ipynb  3_tegenomesimulator_surrogate_modelling.html  3_tegenomesimulator_surrogate_modelling.ipynb  4_tegenomesimulator_abc.ipynb  4_tegenomesimulator_advanced_abc.ipynb  run_tegs_report.R  tegenomesimulator_cmp.ipynb
workshop/3_tegenomesimulator/data/: .gitignore  combined_curated_TE_lib_ATOSZM_selected.fasta  fake_repeat.fa
workshop/3_tegenomesimulator/html/: 4_tegenomesimulator_abc.html
workshop/4_mesa_agent_based_models/: 0_geosir_network_intro.ipynb  1_geosir_network_reliability.ipynb  2_geosir_network_surrogate.ipynb  3_geosir_network_abc.ipynb  4_voan_reliability.ipynb  5_voan_surrogate.ipynb  6_voan_abc.ipynb  geosir.py  geosir_app.py  geosir_network.py  geosir_network_app.py  voan.py  voan_app.py
workshop/5_odes/: 1_sir_sensitivity_uncertainty_analysis.ipynb  3_sir_history_matching.ipynb  4_lotka_volterra_sensitivity_uncertainty_analysis.ipynb  5_lotka_volterra_single_multi_optimisation.ipynb  6_lotka_volterra_history_matching.ipynb
workshop/6_wofost/: 1_wofost_sensitivity_and_uncertainty_analysis.ipynb  2_wofost_single_multi_optimisation.ipynb  3_wofost_history_matching.ipynb  4_wofost_abc.ipynb
workshop/jfruit2/: 0_jfruit2_intro.ipynb  1_jfruit2_sensitivity_analysis.ipynb  2_jfruit2_optimisation.ipynb  jfruit2.py
workshop/jfruit2/data/properties/: GS_apple_sim.properties
workshop/tegenomesimulator/: 1_tegenomesimulator_m0.ipynb  1_tegenomesimulator_sensitivity_analysis.ipynb  2_tegenomesimulator_optimisation.ipynb  summarise_demo_m0.Rmd  tegenomesimulator_report_m0.sh  tegs_report_function.R  test_reproducibility.md
workshop/tegenomesimulator/data/: .gitignore  random_genome_chr_index_small.csv
